<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".NoteDialogFragment"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/primary_soft">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="@color/primary_tint"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/noteEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_note"
        android:textColorHint="@color/primary_hint"
        android:inputType="textMultiLine"
        android:lines="6"
        android:gravity="top|start"
        android:textColor="@color/primary_tint"
        android:background="@android:color/transparent"
        android:text=""
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/writeBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/write"
            android:background="@drawable/shape_button01"
            android:textAlignment="center"
            android:textColor="@color/primary_text_button"
            android:layout_marginEnd="8dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:padding="10dp"
            android:textAlignment="center"
            android:background="@drawable/shape_button01"
            android:textColor="@color/primary_text_button"
            android:layout_marginStart="8dp" />

    </LinearLayout>

</LinearLayout>