<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_bg"
    tools:context=".activities.ForgotPasswordActivity">  <!--android:id="@+id/main"-->


    <!--tool bar-->
    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        >
        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_white"
            android:padding="5dp"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="100dp"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:textColor="@color/primary_contrast"
            android:fontFamily="sans-serif-condensed"
            android:textSize="40sp" />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTiL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_email_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/primary_tint"
                    android:drawableTint="@color/primary_tint"
                    android:textColorHint="@color/primary_hint" />


            </com.google.android.material.textfield.TextInputLayout>



            <!--Login Button-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTiL"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button01"
                android:text="@string/send_code"
                android:textColor="@color/primary_text_button" />




        </RelativeLayout>

    </ScrollView>




</RelativeLayout>